database rework + custom exceptions