@@ -1,14 +1,13 @@
 package com.system.libsystem.rest.books.filter;
 
+import com.system.libsystem.entities.author.AuthorEntity;
+import com.system.libsystem.entities.genre.GenreEntity;
 import com.system.libsystem.entities.book.BookEntity;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static com.system.libsystem.util.SharedConstants.AFFILIATE_A;
@@ -24,55 +23,59 @@ public class FilterBooksSortUtil {
                                                           List<BookEntity> bookEntities) {
         if (Objects.equals(sortDirection, SORT_DESCENDING)) {
             return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getTitle).reversed())
-                    .collect(Collectors.toList());
+                    .sorted(Comparator.comparing(BookEntity::getTitle, Collections.reverseOrder()))
+                    .toList();
         }
-        return bookEntities.stream()
-                .sorted(Comparator.comparing(BookEntity::getTitle)).collect(Collectors.toList());
+        return bookEntities.stream().sorted(Comparator.comparing(BookEntity::getTitle)).toList();
     }
 
     public List<BookEntity> getBooksFilteredByAuthorSorted(String sortDirection,
                                                            List<BookEntity> bookEntities) {
         if (Objects.equals(sortDirection, SORT_DESCENDING)) {
             return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getAuthor).reversed())
-                    .collect(Collectors.toList());
+                    .sorted(Comparator.comparing(BookEntity::getAuthors, Collections.reverseOrder()))
+                    .toList();
         }
-        return bookEntities.stream()
-                .sorted(Comparator.comparing(BookEntity::getAuthor)).collect(Collectors.toList());
+        return bookEntities.stream().sorted(Comparator.comparing((BookEntity b) -> b.getAuthors().stream()
+                .map(AuthorEntity::getName)
+                .sorted()
+                .collect(Collectors.joining(", "))))
+                .toList();
     }
 
     public List<BookEntity> getBooksFilteredByGenreSorted(String sortDirection,
                                                           List<BookEntity> bookEntities) {
         if (Objects.equals(sortDirection, SORT_DESCENDING)) {
             return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getGenre).reversed())
-                    .collect(Collectors.toList());
+                    .sorted(Comparator.comparing(BookEntity::getGenres, Collections.reverseOrder()))
+                    .toList();
         }
-        return bookEntities.stream()
-                .sorted(Comparator.comparing(BookEntity::getGenre)).collect(Collectors.toList());
+        return bookEntities.stream().sorted(Comparator.comparing((BookEntity b) -> b.getGenres().stream()
+                        .map(GenreEntity::getName)
+                        .sorted()
+                        .collect(Collectors.joining(", "))))
+                        .toList();
     }
 
     public List<BookEntity> getBooksFilteredByPublisherSorted(String sortDirection,
                                                               List<BookEntity> bookEntities) {
         if (Objects.equals(sortDirection, SORT_DESCENDING)) {
+
             return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getPublisher).reversed())
-                    .collect(Collectors.toList());
+                    .sorted(Comparator.comparing(o -> o.getPublisherEntity().getName(), Collections.reverseOrder()))
+                    .toList();
         }
-        return bookEntities.stream()
-                .sorted(Comparator.comparing(BookEntity::getPublisher)).collect(Collectors.toList());
+        return bookEntities.stream().sorted(Comparator.comparing(o -> o.getPublisherEntity().getName())).toList();
     }
 
     public List<BookEntity> getBooksFilteredByYearOfPrintSorted(String sortDirection,
                                                                 List<BookEntity> bookEntities) {
         if (Objects.equals(sortDirection, SORT_DESCENDING)) {
             return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getYearOfPrint).reversed())
-                    .collect(Collectors.toList());
+                    .sorted(Comparator.comparing(o -> o.getYearOfPrintEntity().getYearOfPrint(), Collections.reverseOrder()))
+                    .toList();
         }
-        return bookEntities.stream()
-                .sorted(Comparator.comparing(BookEntity::getYearOfPrint)).collect(Collectors.toList());
+        return bookEntities.stream().sorted(Comparator.comparing(o -> o.getYearOfPrintEntity().getYearOfPrint())).toList();
     }
 
     public List<BookEntity> getBooksFilteredByCurrentQuantity(String sortDirection,
@@ -81,20 +84,18 @@ public class FilterBooksSortUtil {
         if (Objects.equals(sortDirection, SORT_DESCENDING)) {
             if (affiliate.equals(AFFILIATE_A)) {
                 return bookEntities.stream()
-                        .sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateA).reversed())
-                        .collect(Collectors.toList());
+                        .sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateA, Collections.reverseOrder()))
+                        .toList();
             } else if (affiliate.equals(AFFILIATE_B)) {
                 return bookEntities.stream()
-                        .sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateB).reversed())
-                        .collect(Collectors.toList());
+                        .sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateB, Collections.reverseOrder()))
+                        .toList();
             }
         }
         if (affiliate.equals(AFFILIATE_A)) {
-            return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateA)).collect(Collectors.toList());
+            return bookEntities.stream().sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateA)).toList();
         } else if (affiliate.equals(AFFILIATE_B)) {
-            return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateB)).collect(Collectors.toList());
+            return bookEntities.stream().sorted(Comparator.comparing(BookEntity::getCurrentQuantityAffiliateB)).toList();
         }
         return Collections.emptyList();
     }
@@ -105,20 +106,18 @@ public class FilterBooksSortUtil {
         if (Objects.equals(sortDirection, SORT_DESCENDING)) {
             if (affiliate.equals(AFFILIATE_A)) {
                 return bookEntities.stream()
-                        .sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateA).reversed())
-                        .collect(Collectors.toList());
+                        .sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateA, Collections.reverseOrder()))
+                        .toList();
             } else if (affiliate.equals(AFFILIATE_B)) {
                 return bookEntities.stream()
-                        .sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateB).reversed())
-                        .collect(Collectors.toList());
+                        .sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateB, Collections.reverseOrder()))
+                        .toList();
             }
         }
         if (affiliate.equals(AFFILIATE_A)) {
-            return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateA)).collect(Collectors.toList());
+            return bookEntities.stream().sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateA)).toList();
         } else if (affiliate.equals(AFFILIATE_B)) {
-            return bookEntities.stream()
-                    .sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateB)).collect(Collectors.toList());
+            return bookEntities.stream().sorted(Comparator.comparing(BookEntity::getGeneralQuantityAffiliateB)).toList();
         }
         return Collections.emptyList();
     }
